--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@walletconnect/ethereum-provider": "^2.22.2",
     "@walletconnect/modal": "^2.7.0",
     "autoprefixer": "^10.4.20",
+    "axios": "1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -72,6 +73,8 @@
     "react-native": "latest",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "socket.io": "4.8.1",
+    "socket.io-client": "4.8.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
